# garganorn

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  test_config.yaml
docs/: foursquare.md  importance_floor_cap_plan.md  importance_threshold_proposal.md  name_index_import_design.md  osm_import_design.md  osm_pbf_parquet_design.md  osm_tag_mapping.md  overture.md  proposed-lexicon-changes.md  query_optimization_plan.md  s2_duckdb_design.md  tile-privacy-design.md  trigram_search_design.md  wof-boundary-complexity.md  wof_backend_plan.md
garganorn/: __init__.py  __main__.py  boundaries.py  config.py  database.py  quadtree.py  server.py  tile_reader.py
scripts/: bench-garganorn.py  build-density.sh  build-idf.sh  download-fsq.sh  download-osm.sh  download-overture.sh  extract-osm-parquet.sh  import-fsq-extract.sh  import-fsq-osp.sql  import-osm.sh  import-overture-extract.sh  import-overture-places.sql  import-wof-boundaries.sh  importance-stats.py  perf-test.py
tests/: conftest.py  quadtree_helpers.py  test_app.py  test_boundaries.py  test_config.py  test_coord_exprs_bug.py  test_database.py  test_dedup_rkey.py  test_download_scripts.py  test_export.py  test_extract_osm_parquet.sh  test_foursquare.py  test_get_coverage.py  test_import_fsq.py  test_import_osm.py  test_import_overture.py  test_import_pipeline.py  test_importance.py  test_importance_threshold.py  test_integration_quadtree.py  test_osm.py  test_overture.py  test_overture_division.py  test_phase1_schema_rename.py  test_pipeline.py  (+8 more)
(+34 files in other folders)
